--- a/index.html
+++ b/index.html
@@ -354,8 +354,7 @@
           </p>
 
           <div class="button-row">
-            <a class="btn-primary"
-               href="booking.html">
+            <a class="btn-primary" href="booking.html">
               Book a first session
             </a>
             <a class="btn-ghost" href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
@@ -383,6 +382,25 @@
       </p>
     </section>
 
+    <!-- WHY I LIKE MATH -->
+    <section>
+      <h3>Why I Like Math</h3>
+      <p>
+        I’ve always liked how math gives clear answers when you break problems down the
+        right way. It’s logical, structured, and it rewards patience and careful thinking.
+      </p>
+      <p>
+        In college, I took courses like Calculus I &amp; II, Linear Algebra, Differential
+        Equations, and Probability &amp; Statistics as part of my Applied Mathematics and
+        Statistics degree. That background helps me see the “big picture” of where school
+        math is going and how to connect what your child is learning now to what comes next.
+      </p>
+      <p>
+        My goal is to help students feel that math is something they can actually
+        understand and use, not just something they have to “get through.”
+      </p>
+    </section>
+
     <!-- WHAT I TUTOR -->
     <section id="services">
       <h3>What I Tutor</h3>
@@ -392,6 +410,7 @@
         <li>Word problems and logical thinking</li>
         <li>Pre-Algebra</li>
         <li>Algebra I</li>
+        <li>Calculus I (for high school or early college level)</li>
         <li>General homework help + test preparation</li>
       </ul>
     </section>
@@ -415,24 +434,47 @@
       </p>
     </section>
 
+    <!-- WHAT THE FIRST SESSION LOOKS LIKE -->
+    <section>
+      <h3>What the First Session Looks Like</h3>
+      <p>Here’s what you can expect from our first hour together:</p>
+      <ul>
+        <li><span class="pricing-highlight">Quick introductions:</span> I get to know your child, how they feel about math, and what’s been challenging.</li>
+        <li><span class="pricing-highlight">Review of recent work:</span> We’ll look at homework, quizzes, or tests to see where things started feeling unclear.</li>
+        <li><span class="pricing-highlight">How they think:</span> I’ll ask your child to talk through a few problems so I can see how they approach questions and where they get stuck.</li>
+        <li><span class="pricing-highlight">Mini game plan:</span> By the end of the session, I’ll have a clearer sense of what to focus on and how often it makes sense to meet.</li>
+        <li><span class="pricing-highlight">Parent recap:</span> I’ll share a quick summary with you of what I noticed and how I’d suggest moving forward.</li>
+      </ul>
+      <p>
+        The first session is relaxed, low-pressure, and built around making your child
+        feel comfortable and heard.
+      </p>
+    </section>
+
     <!-- PRICING -->
     <section id="pricing">
       <div class="section-divider"></div>
       <h3>Pricing</h3>
-      <p class="pricing-note">
-        I’m currently finalizing my standard rate. For now, here’s how pricing is structured:
-      </p>
       <ul>
-        <li><span class="pricing-highlight">Standard rate:</span> X&nbsp;$/hour (to be confirmed)</li>
-        <li><span class="pricing-highlight">First session:</span> 25% off the standard hourly rate</li>
         <li>
-          <span class="pricing-highlight">Location:</span> In-person sessions primarily in Brooklyn and nearby areas.
-          Additional travel fees may apply for sessions in Manhattan (to cover parking, tolls, and transportation).
+          <span class="pricing-highlight">Standard rate:</span>
+          $100 per hour.
+        </li>
+        <li>
+          <span class="pricing-highlight">First session (25% off):</span>
+          $75 for the first 60-minute session
+          <span class="muted">(100 × (1 − 0.25) — see? Math is useful.)</span>
+        </li>
+        <li>
+          <span class="pricing-highlight">Location:</span>
+          In-person sessions primarily in Brooklyn and nearby areas.
+          Additional travel fees may apply depending on distance, tolls, or parking needs.
         </li>
       </ul>
       <p class="pricing-note">
-        If you reach out by email, I’ll share my current rate and we can discuss what makes sense
-        for your child’s needs and your schedule.
+        If you reach out by email or through the booking form, I can confirm my current
+        availability and we can decide together what schedule makes the most sense for
+        your child.
       </p>
     </section>
 
@@ -454,8 +496,8 @@
         <a href="mailto:novik.ben@gmail.com">novik.ben@gmail.com</a>
       </p>
       <p class="fine-print">
-        Feel free to include your child’s grade, school, current math topic, and a few times that work
-        for a first session. I usually respond within 24 hours.
+        You can also use the booking form to share details about your child and your goals.
+        I usually reply within 24 hours to suggest times for a quick call or a first session.
       </p>
 
       <div class="button-row">
