--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <style>
     :root {
       /* PURPLE PREMIUM PALETTE */
-      --bg-body: #f5f1ff;         /* soft lavender */
-      --bg-body-soft: #f9f6ff;
+      --bg-body: #f5f1ff;
       --card-bg: #ffffff;
       --card-subtle: #f7f5ff;
-      --accent: #7c3aed;          /* main purple */
+      --accent: #7c3aed;
       --accent-soft: #6d28d9;
       --accent-pill: #e0d4ff;
       --nav-text: #2d1b4c;
@@ -21,9 +20,7 @@
       --shadow-soft: 0 18px 45px rgba(31, 41, 55, 0.18);
     }
 
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
@@ -33,21 +30,14 @@
       color: var(--text-main);
     }
 
-    a {
-      color: var(--accent);
-      text-decoration: none;
-    }
+    a { color: var(--accent); text-decoration: none; }
+    a:hover { text-decoration: underline; }
 
-    a:hover {
-      text-decoration: underline;
-    }
-
-    /* TOP NAV – clean, light */
+    /* NAV */
 
     .top-nav {
       background: rgba(255, 255, 255, 0.96);
       color: var(--nav-text);
-      padding: 0;
       position: sticky;
       top: 0;
       z-index: 30;
@@ -55,7 +45,6 @@
       border-bottom: 1px solid rgba(226, 232, 240, 0.9);
       box-shadow: 0 3px 10px rgba(15, 23, 42, 0.05);
     }
-
     .nav-inner {
       max-width: 1040px;
       margin: 0 auto;
@@ -64,13 +53,11 @@
       align-items: center;
       justify-content: space-between;
     }
-
     .nav-left {
       display: flex;
       align-items: baseline;
       gap: 0.5rem;
     }
-
     .nav-logo {
       font-weight: 650;
       letter-spacing: 0.08em;
@@ -78,32 +65,28 @@
       color: var(--nav-text);
       text-transform: uppercase;
     }
-
     .nav-tagline {
       font-size: 0.78rem;
       color: #6b7280;
     }
-
     .nav-links a {
       margin-left: 1.3rem;
       font-size: 0.88rem;
       color: var(--nav-text);
       opacity: 0.9;
     }
-
     .nav-links a:hover {
       color: var(--accent-soft);
       opacity: 1;
     }
 
-    /* OUTER SHELL */
+    /* LAYOUT */
 
     .shell {
       max-width: 1040px;
       margin: 32px auto 26px;
       padding: 0 1.5rem 1.5rem;
     }
-
     .page {
       background: var(--card-bg);
       border-radius: 24px;
@@ -120,13 +103,11 @@
       color: #111827;
       letter-spacing: 0.01em;
     }
-
     h2 {
       font-size: 1.4rem;
       margin: 0.2rem 0 0.85rem;
       color: #111827;
     }
-
     h3 {
       margin-top: 1.9rem;
       margin-bottom: 0.6rem;
@@ -134,29 +115,23 @@
       font-size: 1.08rem;
       letter-spacing: 0.02em;
     }
-
     p {
       margin-bottom: 0.75rem;
       line-height: 1.7;
       color: var(--text-main);
       font-size: 0.97rem;
     }
-
     .muted {
       color: var(--text-muted);
       font-size: 0.9rem;
     }
-
     ul {
       padding-left: 1.15rem;
       margin-bottom: 0.3rem;
       color: var(--text-main);
       font-size: 0.96rem;
     }
-
-    li + li {
-      margin-top: 0.18rem;
-    }
+    li + li { margin-top: 0.18rem; }
 
     .section-label {
       text-transform: uppercase;
@@ -167,22 +142,17 @@
       margin-bottom: 0.1rem;
     }
 
-    /* HERO / BANNER */
+    /* HERO */
 
     .hero {
-      display: grid;
-      grid-template-columns: minmax(0, 1.5fr) minmax(0, 1.1fr);
-      gap: 2rem;
-      align-items: center;
-      padding: 22px 22px 24px;
       border-radius: 20px;
       background:
         radial-gradient(circle at top left, #ede9fe 0, #f5f3ff 35%, #ffffff 75%);
       border: 1px solid var(--border-subtle);
+      padding: 22px 22px 24px;
       margin-bottom: 1.9rem;
     }
-
-    .hero-text-topline {
+    .hero-topline {
       display: inline-flex;
       align-items: center;
       gap: 0.4rem;
@@ -196,24 +166,30 @@
       text-transform: uppercase;
       margin-bottom: 0.6rem;
     }
-
     .hero-subtitle {
       margin-top: 0.35rem;
       color: #4b5563;
       font-size: 0.95rem;
       max-width: 32rem;
     }
+    .hero-grid {
+      display: grid;
+      grid-template-columns: minmax(0, 0.95fr) minmax(0, 1.3fr);
+      gap: 2rem;
+      align-items: center;
+      margin-top: 1.6rem;
+    }
+
+    /* PHOTO */
 
     .hero-photo-wrap {
       display: flex;
       justify-content: center;
     }
-
     .hero-photo-inner {
       position: relative;
       display: inline-block;
     }
-
     .hero-photo-ring {
       position: absolute;
       inset: -10%;
@@ -222,7 +198,6 @@
       opacity: 0.5;
       filter: blur(4px);
     }
-
     .profile-photo {
       position: relative;
       width: 260px;
@@ -234,7 +209,6 @@
       border: 4px solid #ffffff;
       background: #111827;
     }
-
     .hero-photo-caption {
       margin-top: 0.6rem;
       text-align: center;
@@ -250,7 +224,6 @@
       flex-wrap: wrap;
       gap: 0.75rem;
     }
-
     .btn-primary {
       display: inline-flex;
       align-items: center;
@@ -267,12 +240,10 @@
       cursor: pointer;
       white-space: nowrap;
     }
-
     .btn-primary:hover {
       background: radial-gradient(circle at top left, #c4b5fd 0, #7c3aed 40%, #5b21b6 100%);
       transform: translateY(-1px);
     }
-
     .btn-ghost {
       display: inline-flex;
       align-items: center;
@@ -285,13 +256,12 @@
       background: #ffffff;
       white-space: nowrap;
     }
-
     .btn-ghost:hover {
       border-color: var(--accent);
       color: var(--accent);
     }
 
-    /* SECTION CARDS */
+    /* SECTIONS */
 
     .section-block {
       background: var(--card-subtle);
@@ -300,39 +270,28 @@
       padding: 16px 18px 16px;
       margin-top: 1.1rem;
     }
-
-    .section-inline {
-      margin-top: 1.5rem;
-    }
-
+    .section-inline { margin-top: 1.5rem; }
     .section-divider {
       height: 1px;
       background: var(--border-subtle);
       margin: 2rem 0 1.6rem;
     }
-
     .pricing-note {
       font-size: 0.93rem;
       color: var(--text-muted);
       margin-top: 0.4rem;
     }
-
-    .pricing-highlight {
-      font-weight: 600;
-    }
-
+    .pricing-highlight { font-weight: 600; }
     .inline-muted {
       font-size: 0.85rem;
       color: var(--text-muted);
       font-style: italic;
       margin-left: 0.3rem;
     }
-
     .contact-email {
       font-weight: 600;
       font-size: 0.98rem;
     }
-
     .fine-print {
       font-size: 0.85rem;
       color: var(--text-muted);
@@ -353,15 +312,11 @@
     }
 
     @media (max-width: 820px) {
-      .hero {
+      .hero-grid {
         grid-template-columns: 1fr;
-        padding: 18px 16px 20px;
+        gap: 1.4rem;
       }
-
-      .hero-photo-wrap {
-        order: -1;
-      }
-
+      .hero-photo-wrap { order: -1; }
       .profile-photo {
         width: 230px;
         height: 230px;
@@ -375,31 +330,20 @@
         align-items: flex-start;
         gap: 0.35rem;
       }
-
       .nav-links a {
         margin-left: 0;
         margin-right: 0.9rem;
       }
-
-      .shell {
-        padding: 0 0.9rem 1.1rem;
-      }
-
-      .page {
-        padding: 22px 18px 26px;
-      }
-
+      .shell { padding: 0 0.9rem 1.1rem; }
+      .page { padding: 22px 18px 26px; }
       .button-row {
         flex-direction: column;
         align-items: stretch;
       }
-
-      .btn-primary,
-      .btn-ghost {
+      .btn-primary, .btn-ghost {
         width: 100%;
         justify-content: center;
       }
-
       .footer {
         flex-direction: column;
         gap: 0.2rem;
@@ -410,7 +354,7 @@
 </head>
 
 <body>
-  <!-- TOP NAV -->
+  <!-- NAV -->
   <header class="top-nav">
     <div class="nav-inner">
       <div class="nav-left">
@@ -428,57 +372,57 @@
     </div>
   </header>
 
-  <!-- MAIN WRAPPER -->
+  <!-- MAIN -->
   <div class="shell">
     <main class="page">
-      <!-- HERO / ABOUT -->
+      <!-- HERO -->
       <section id="about" class="hero">
-        <div>
-          <div class="hero-text-topline">
-            1-on-1 in-person tutoring
-          </div>
-          <h1>Math tutoring for kids &amp; teenagers.</h1>
-          <p class="hero-subtitle">
-            Patient, calm support that focuses on real understanding first—so grades and
-            confidence can follow.
-          </p>
+        <div class="hero-topline">1-on-1 in-person tutoring</div>
+        <h1>Math tutoring for kids &amp; teenagers.</h1>
+        <p class="hero-subtitle">
+          Patient, calm support that focuses on real understanding first—so grades and
+          confidence can follow.
+        </p>
 
-          <h2>Hi, I’m Ben.</h2>
-          <p>
-            I graduated from Stony Brook University with a Bachelor of Science in Applied
-            Mathematics and Statistics. I was born and raised in New York City and
-            currently live in Brooklyn.
-          </p>
-          <p>
-            I have a personal vehicle for travel and know the city well, which makes it
-            easy for me to meet students and families in convenient locations.
-          </p>
-          <p>
-            Outside of tutoring, I have two cats and I love playing tennis and
-            basketball. Working with kids has always come naturally to me, and I bring
-            that same patience and calm energy into every session.
-          </p>
-
-          <div class="button-row">
-            <a class="btn-primary" href="booking.html">
-              Book a first session
-            </a>
-            <a class="btn-ghost" href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
-              Email me directly
-            </a>
+        <div class="hero-grid">
+          <!-- PHOTO LEFT -->
+          <div class="hero-photo-wrap">
+            <div>
+              <div class="hero-photo-inner">
+                <div class="hero-photo-ring"></div>
+                <img src="headshot_purple.jpg" alt="Photo of Ben Novik" class="profile-photo">
+              </div>
+              <div class="hero-photo-caption">
+                Based in New York City · In-person sessions
+              </div>
+            </div>
           </div>
-        </div>
 
-        <div class="hero-photo-wrap">
-          <div class="hero-photo-inner">
-            <div class="hero-photo-ring"></div>
-            <img
-              src="headshot_purple.jpg"
-              alt="Photo of Ben Novik"
-              class="profile-photo">
-          </div>
-          <div class="hero-photo-caption">
-            Based in New York City · In-person sessions
+          <!-- TEXT RIGHT -->
+          <div>
+            <div class="section-label">About me</div>
+            <h2>Hi, I’m Ben.</h2>
+            <p>
+              I graduated from Stony Brook University with a Bachelor of Science in Applied
+              Mathematics and Statistics. I was born and raised in New York City and
+              currently live in Brooklyn.
+            </p>
+            <p>
+              I have a personal vehicle for travel and know the city well, which makes it
+              easy for me to meet students and families in convenient locations.
+            </p>
+            <p>
+              Outside of tutoring, I have two cats and I love playing tennis and
+              basketball. Working with kids has always come naturally to me, and I bring
+              that same patience and calm energy into every session.
+            </p>
+
+            <div class="button-row">
+              <a class="btn-primary" href="booking.html">Book a first session</a>
+              <a class="btn-ghost" href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
+                Email me directly
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -564,7 +508,7 @@
         </div>
       </section>
 
-      <!-- WHAT THE FIRST SESSION LOOKS LIKE -->
+      <!-- FIRST SESSION DETAIL -->
       <section class="section-inline">
         <div class="section-label">First meeting</div>
         <h3>What the first session looks like</h3>
@@ -641,11 +585,8 @@
         </p>
 
         <div class="button-row">
-          <a class="btn-primary" href="booking.html">
-            Book a first session
-          </a>
-          <a class="btn-ghost"
-             href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
+          <a class="btn-primary" href="booking.html">Book a first session</a>
+          <a class="btn-ghost" href="mailto:novik.ben@gmail.com?subject=Math%20Tutoring%20Inquiry">
             Email Ben with questions
           </a>
         </div>
