--- a/credentials.html
+++ b/credentials.html
@@ -2,118 +2,154 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Credentials | Ben Novik</title>
+  <title>Ben Novik | Credentials</title>
 
   <style>
+    /* same design system as index */
     :root {
-      --bg-body: #e5e7eb;
+      --bg-body: #f5f1ff;
       --card-bg: #ffffff;
-      --accent: #2563eb;
-      --accent-soft: #1d4ed8;
-      --nav-text: #0f172a;
-      --text-main: #111827;
+      --card-subtle: #f7f5ff;
+      --accent: #7c3aed;
+      --accent-soft: #6d28d9;
+      --accent-pill: #e0d4ff;
+      --nav-text: #2d1b4c;
+      --text-main: #18181b;
       --text-muted: #6b7280;
       --border-subtle: #e5e7eb;
+      --shadow-soft: 0 18px 45px rgba(31, 41, 55, 0.18);
     }
-
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background-color: var(--bg-body);
+      background:
+        radial-gradient(circle at top left, #ede9fe 0, #f5f1ff 40%, #f9f6ff 100%);
       color: var(--text-main);
     }
-
-    a {
-      color: var(--accent);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
+    a { color: var(--accent); text-decoration: none; }
+    a:hover { text-decoration: underline; }
 
     .top-nav {
-      background: #ffffff;
+      background: rgba(255, 255, 255, 0.96);
       color: var(--nav-text);
-      padding: 0.75rem 1.5rem;
       position: sticky;
       top: 0;
-      z-index: 20;
-      box-shadow: 0 3px 10px rgba(15,23,42,0.10);
+      z-index: 30;
+      backdrop-filter: blur(16px);
+      border-bottom: 1px solid rgba(226, 232, 240, 0.9);
+      box-shadow: 0 3px 10px rgba(15, 23, 42, 0.05);
     }
-
     .nav-inner {
-      max-width: 960px;
+      max-width: 1040px;
       margin: 0 auto;
+      padding: 0.7rem 1.5rem;
       display: flex;
       align-items: center;
       justify-content: space-between;
     }
-
+    .nav-left { display: flex; align-items: baseline; gap: 0.5rem; }
     .nav-logo {
-      font-weight: 600;
-      letter-spacing: 0.03em;
-      font-size: 0.95rem;
+      font-weight: 650;
+      letter-spacing: 0.08em;
+      font-size: 0.88rem;
       color: var(--nav-text);
+      text-transform: uppercase;
     }
-
+    .nav-tagline { font-size: 0.78rem; color: #6b7280; }
     .nav-links a {
-      margin-left: 1.25rem;
-      font-size: 0.9rem;
+      margin-left: 1.3rem;
+      font-size: 0.88rem;
       color: var(--nav-text);
+      opacity: 0.9;
     }
+    .nav-links a:hover { color: var(--accent-soft); opacity: 1; }
 
-    .nav-links a:hover {
-      color: var(--accent-soft);
+    .shell {
+      max-width: 1040px;
+      margin: 32px auto 26px;
+      padding: 0 1.5rem 1.5rem;
     }
-
     .page {
-      max-width: 960px;
-      margin: 28px auto 36px;
-      padding: 26px 24px 30px;
       background: var(--card-bg);
-      border-radius: 18px;
-      box-shadow: 0 16px 40px rgba(15,23,42,0.18);
-      text-align: center;
+      border-radius: 24px;
+      box-shadow: var(--shadow-soft);
+      padding: 26px 28px 32px;
+      border: 1px solid rgba(226, 232, 240, 0.9);
     }
 
     h1 {
-      font-size: 1.9rem;
-      margin-bottom: 0.35rem;
-    }
-
-    p {
-      margin-bottom: 0.9rem;
-      color: var(--text-muted);
-    }
-
-    .diploma-img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 12px;
-      margin: 1rem 0 2rem;
-      box-shadow: 0 18px 40px rgba(15,23,42,0.45);
-      border: 1px solid var(--border-subtle);
-    }
-
-    .btn-link {
-      display: inline-block;
-      margin-top: 0.25rem;
-      padding: 0.55rem 1.2rem;
-      border-radius: 999px;
-      border: 1px solid #d1d5db;
-      background: #ffffff;
-      font-size: 0.9rem;
+      font-size: 1.8rem;
+      margin: 0 0 0.3rem;
       color: #111827;
     }
+    p {
+      margin-bottom: 0.75rem;
+      line-height: 1.7;
+      color: var(--text-main);
+      font-size: 0.97rem;
+    }
+    .section-label {
+      text-transform: uppercase;
+      letter-spacing: 0.16em;
+      font-size: 0.74rem;
+      font-weight: 600;
+      color: #a1a1aa;
+      margin-bottom: 0.3rem;
+    }
 
-    .btn-link:hover {
-      border-color: var(--accent);
-      color: var(--accent);
+    .hero-cred {
+      border-radius: 20px;
+      background:
+        radial-gradient(circle at top left, #ede9fe 0, #f5f3ff 35%, #ffffff 75%);
+      border: 1px solid var(--border-subtle);
+      padding: 22px 22px 26px;
+      margin-bottom: 1.9rem;
+    }
+    .hero-subtitle { color: var(--text-muted); font-size: 0.95rem; }
+
+    .diploma-card {
+      background: var(--card-subtle);
+      border-radius: 16px;
+      border: 1px solid #e5e7eb;
+      padding: 18px 18px 20px;
+    }
+    .diploma-img {
+      width: 100%;
+      max-width: 780px;
+      display: block;
+      margin: 0 auto;
+      border-radius: 10px;
+      box-shadow: 0 18px 40px rgba(15,23,42,0.25);
+    }
+
+    .btn-primary {
+      display: inline-flex;
+      margin-top: 1.2rem;
+      padding: 0.65rem 1.4rem;
+      border-radius: 999px;
+      background: radial-gradient(circle at top left, #a855f7 0, #7c3aed 40%, #5b21b6 100%);
+      color: #ffffff;
+      font-weight: 600;
+      font-size: 0.9rem;
+      border: none;
+      text-decoration: none;
+      box-shadow: 0 10px 25px rgba(88, 28, 135, 0.45);
+    }
+    .btn-primary:hover {
+      background: radial-gradient(circle at top left, #c4b5fd 0, #7c3aed 40%, #5b21b6 100%);
+      transform: translateY(-1px);
+    }
+
+    .footer {
+      max-width: 1040px;
+      margin: 12px auto 18px;
+      padding: 0 1.5rem;
+      color: #6b7280;
+      font-size: 0.78rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
     @media (max-width: 720px) {
@@ -122,40 +158,65 @@
         align-items: flex-start;
         gap: 0.35rem;
       }
-
       .nav-links a {
         margin-left: 0;
         margin-right: 0.9rem;
       }
-
-      .page {
-        margin: 16px 10px 26px;
-        padding: 20px 16px 24px;
+      .shell { padding: 0 0.9rem 1.1rem; }
+      .page { padding: 22px 18px 26px; }
+      .footer {
+        flex-direction: column;
+        gap: 0.2rem;
+        text-align: center;
       }
     }
   </style>
 </head>
-
 <body>
-  <!-- TOP NAV -->
+  <!-- NAV -->
   <header class="top-nav">
     <div class="nav-inner">
-      <div class="nav-logo">BEN NOVIK • MATH TUTOR</div>
+      <div class="nav-left">
+        <div class="nav-logo">BEN NOVIK</div>
+        <div class="nav-tagline">Private Math Tutoring • NYC</div>
+      </div>
       <nav class="nav-links">
-        <a href="index.html">Home</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#services">What I Tutor</a>
         <a href="index.html#pricing">Pricing</a>
+        <a href="booking.html">Book a Session</a>
         <a href="index.html#contact">Contact</a>
+        <a href="credentials.html">Credentials</a>
       </nav>
     </div>
   </header>
 
-  <main class="page">
-    <h1>Credentials</h1>
-    <p>Below is my diploma for parents who would like to verify my academic background.</p>
+  <div class="shell">
+    <main class="page">
+      <section class="hero-cred">
+        <div class="section-label">Background</div>
+        <h1>Credentials</h1>
+        <p class="hero-subtitle">
+          I earned my Bachelor of Science in Applied Mathematics and Statistics from
+          Stony Brook University. Parents who would like to verify my academic background
+          can view my diploma below.
+        </p>
+      </section>
 
-    <img src="diploma.jpg" alt="Diploma for Ben Novik" class="diploma-img">
+      <section class="diploma-card">
+        <img src="diploma.JPG" alt="Diploma for Benjamin Novik from Stony Brook University" class="diploma-img">
+        <a href="index.html" class="btn-primary">← Back to main site</a>
+      </section>
+    </main>
+  </div>
 
-    <a href="index.html" class="btn-link">← Back to main site</a>
-  </main>
+  <footer class="footer">
+    <span>© <span id="year"></span> Ben Novik Tutoring</span>
+    <span>Based in New York City</span>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
